# aerospike-client-python

./: .build.yml  .clang-format  .clang-format-ignore  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pydevproject  .readthedocs.yaml  .readthedocs.yml  .travis.yml  BUILD.md  CODEOWNERS  MANIFEST.in  README.md  README.rst  Releases.md  VERSION  Vagrantfile  aerospike-client-c.ini  api-changes.md  bootstrap.sh  custom-versionit-format.py  doc8.ini  doc_standards.md  foo.lua  get-artifacts.sh  incompatible.md  inspect-core-dump-on-github-actions.sh  meson.build  pyproject.toml  requirements.txt  rp-setup.py  setup.cfg  setup.py  setup_osx.py  stubtest-allowlist  test.sh  (+5 more)
.github/: dependabot.yml  pylock-3.10.toml  release-drafter.yml
.github/workflows/: Dockerfile  aerospike.ovpn  aerospike_vpn_nosplit.ovpn  build-alpine.sh  build-and-run-stage-tests.yml  build-and-test-whl-on-self-hosted.yml  build-and-upload-wheels-for-qe.yml  build-artifacts.yml  build-c-client.yml  build-python-client.yml  build-rhel9.sh  build-rpm-based.sh  build-sanitizer-wheel.yml  build-sdist.yml  build-server-ee-image-for-dev-tests.yml  build-server-ee-image.yml  build-wheel-and-run-perf-regression-test.yml  build-wheels.yml  build.yml  bump-dev-num.py  bump-rc-and-reset-dev-number-in-dev.py  bump-rc-and-reset-dev-number.py  bump-stage-and-upload-to-jfrog.yml  bump-to-next-minor-version-and-reset-rc-and-dev.py  bump-version.yml  cibuildwheel.yml  cpp-linter.yml  create-pylock-file.yml  delete-artifacts.yml  dev-to-stage.yml  dev-workflow-p1.yml  dev-workflow-p2.yml  dev-workflow-part2.yml  dl-and-test-wheel.yml  doc-tests.yml  download-and-test-wheel.yml  fast-forward-merge.yml  ff-master-stage.yml  filter-artifacts.py  get-runner-os-for-platform-tag.py  (+46 more)
.travis/: aerospike.conf
aerospike/: __init__.py  aerospike.pyi  exception.pyi
aerospike-stubs/: __init__.pyi  aerospike.pyi  exception.pyi  predicates.pyi
aerospike_helpers/: __init__.py  batch_records.py  cdt_ctx.py  expressions.py  hll.py  predexp.py
aerospike_helpers/awaitable/: __init__.py  io.py
aerospike_helpers/batch/: __init__.py  records.py
aerospike_helpers/expressions/: __init__.py  arithmetic.py  base.py  bitwise.py  bitwise_operators.py  hll.py  list.py  map.py  resources.py
aerospike_helpers/metrics/: __init__.py
aerospike_helpers/operations/: bitwise_operations.py  expression_operations.py  expressions.py  hll_operations.py  list_operations.py  map_operations.py  operations.py
benchmarks/: README.rst  keygen.py  kvs.py  requirements.txt  rust-based-client-benchmarks.py  rust-based-client-equivalent.py  test_concurrent.py
doc/: .gitignore  .snyk  README.md  admin_change_password.md  admin_create_role.md  admin_create_user.md  admin_drop_role.md  admin_drop_user.md  admin_grant_privileges.md  admin_grant_roles.md  admin_query_role.md  admin_query_roles.md  admin_query_user.md  admin_query_users.md  admin_replace_roles.md  admin_revoke_privileges.md  admin_revoke_roles.md  admin_set_password.md  aerospike.rst  aerospike_helpers.batch.rst  aerospike_helpers.cdt_ctx.rst  aerospike_helpers.expressions.rst  aerospike_helpers.metrics.rst  aerospike_helpers.operations.rst  aerospike_helpers.rst  aggregate.md  append.md  apply.md  base_policy.rst  client.rst  close.md  commands_vs_transactions.rst  conf.py  config_provider.rst  connect.md  data_mapping.rst  deprecate_meta.rst  deprecate_meta_ttl.rst  deserializer.md  doc8.ini  (+82 more)
doc/_static/: theme_overrides.css
doc/examples/: batch_apply.lua  batch_apply.py  batch_get_ops.py  batch_operate.py  batch_remove.py  batch_write.py  boilerplate.py  exists.py  exists_many.py  get.py  get_cdtctx_base64.py  get_expression_base64.py  get_key_digest.py  get_many.py  keyordereddict.py  log.py  operate.py  operate_ordered.py  put.py  remove.py  remove_bin.py  select.py  select_many.py  serializer.py  touch.py  truncate.py
examples/: README.md  exists.py  info.py  kvs.py  pred2_example.py  query.py  scan.py  simple.lua
examples/admin/: change_password.py  create_role.py  create_user.py  drop_role.py  drop_user.py  grant_privileges.py  grant_roles.py  query_role.py  query_roles.py  query_user.py  query_user_info.py  query_users.py  query_users_info.py  replace_roles.py  revoke_privileges.py  revoke_roles.py  set_password.py
examples/client/: \  aggregate.py  append.py  apply.py  bin_lua.lua  bin_ops.py  client_big_list.py  delete.py  example.lua  exists.py  exists_many.py  exp_index_create.py  exp_list_index_create.py  get.py  get_async.py  get_key_digest.py  get_many.py  get_nodes.py  increment.py  index_create.py  index_remove.py  info.py  info_node.py  integer_index.py  isConnected.py  is_connected.py  kvs.py  llist.py  multi_thread.py  operate.py  prepend.py  put.py  put_async.py  putget_async.py  query.py  query_apply.py  query_exp.py  query_index_name_exp.py  register_udf.py  remove.py  (+20 more)
examples/deprecated/: get.py  (+3 more)
fast_aerospike_stubs/: __init__.pyi
run_examples/: example_setup.py  example_teardown.py
scripts/: aerospike-client-c.sh  build.sh  manylinux2014build.sh  manylinux2_28_build.sh  manylinuxbuild.sh  os_version  publish.sh  pypirc  travis-prep.sh  wait-for-node.sh
test/: README.md  bin_lua.lua  client_perf.yaml  config.conf  config.conf.template  conftest.py  count.py  counter26.py  definite_issue.txt  dyn_config.yml  dyn_config_metrics_disabled.yml  investigated_suppressions.txt  multinode-test.py  my.supp  possible_issue_suppressions.txt  pytest.ini  query_apply.lua  query_apply_parameters.lua  reduce.py  register-client-tests.yaml  requirements.txt  run  stream_example.lua  strip.py  test_admin_change_password.py  test_admin_create_role.py  test_admin_create_user.py  test_admin_drop_role.py  test_admin_drop_user.py  test_admin_grant_privileges.py  test_admin_grant_roles.py  test_admin_query_role.py  test_admin_query_roles.py  test_admin_query_user.py  test_admin_query_users.py  test_admin_replace_roles.py  test_admin_revoke_privileges.py  test_admin_revoke_roles.py  test_admin_set_password.py  test_aggregate.py  (+71 more)
(+539 files in other folders)
