[tool.poetry]
name = "aerospike"
version = "10.0.0"
description = "Aerospike Client Library for Python"
authors = ["Aerospike, Inc. <info@aerospike.com>"]
license = "Apache Software License"
readme = "README.rst"
build = "setup.py"
packages = [
    { include = "aerospike_helpers" },
]

[tool.poetry.dependencies]
python = ">=3.7,<=3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[tool.poetry.group.build.dependencies]
build = "^0.10.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
psutil = "^5.9.4"
pytest-asyncio = "^0.20.3"

[tool.poetry.group.docs.dependencies]
Sphinx = "^3.2.1"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-spelling = "^7.6.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
