[build-system]
requires = [
    "setuptools",
    "versioningit==3.1.0",
    # Used by our versioningit script that modifies the version
    "parver==0.5"
]
build-backend = "setuptools.build_meta"

[project]
name = "aerospike"
description = "Aerospike Client Library for Python"
authors = [
    {name = "Aerospike, Inc.", email = "info@aerospike.com"}
]
readme = "README.rst"
license = {text = "Apache Software License"}
keywords = ["aerospike", "nosql", "database"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://aerospike.com"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.versioningit]

[tool.versioningit.vcs]
method = {module = "custom-versionit-format", value="my_vcs"}

# Use versioneer formatting
[tool.versioningit.format]
method = {module = "custom-versionit-format", value="my_format"}
distance = "{base_version}+{distance}.{vcs}{rev}"
# Example formatted version: 1.2.3+42.ge174a1f

dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
# Example formatted version: 1.2.3+42.ge174a1f.dirty

distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
# Example formatted version: 1.2.3+42.ge174a1f.dirty
