[build-system]
requires = [
    "setuptools",
    "versioningit==3.1.0",
    # Used by our versioningit script that modifies the version
    "parver==0.5"
]
build-backend = "setuptools.build_meta"

[project]
name = "aerospike"
description = "Aerospike Client Library for Python"
authors = [
    {name = "Aerospike, Inc.", email = "info@aerospike.com"}
]
readme = "README.rst"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["aerospike", "nosql", "database"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://aerospike.com"

[tool.setuptools]
include-package-data = true
packages = [
    "aerospike_helpers",
    "aerospike_helpers.operations",
    "aerospike_helpers.batch",
    "aerospike_helpers.expressions",
    "aerospike_helpers.metrics",
    "aerospike-stubs"
]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.versioningit]

[tool.versioningit.vcs]
method = {module = "custom-versionit-format", value="my_vcs"}

# Use versioneer formatting
[tool.versioningit.format]
method = {module = "custom-versionit-format", value="my_format"}
distance = "{base_version}+{distance}.{vcs}{rev}"
# Example formatted version: 1.2.3+42.ge174a1f

dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
# Example formatted version: 1.2.3+42.ge174a1f.dirty

distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
# Example formatted version: 1.2.3+42.ge174a1f.dirty
